--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="row align-items-center">
 
         <div class="col-md-6 text-center text-md-start mb-4 mb-md-0">
-          <img src="images/about us.png" alt="About Voiceify" class="img-fluid rounded shadow-lg">
+          <img src="about us.png" alt="About Voiceify" class="img-fluid rounded shadow-lg">
         </div>
 
         <div class="col-md-6">
@@ -282,3 +282,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
