--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             </div>
 
             <div class="mt-3">
-              <button id="toggle-btn" class="btn btn-generate w-100">Generate Speech</button>
+               <button id="toggle-btn" class="btn btn-generate w-100">
+               <i class="bi bi-lightning me-2"></i> Generate Speech
+               </button>
             </div>
           </div>
         </div>
@@ -282,4 +284,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
