--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
 </head>
 <body>
  
-  <!-- DARK/LIGHT TOGGLE -->
-   <!-- Dark/Light Mode Toggle -->
-<div id="theme-toggle" class="theme-toggle">
-  <i id="theme-icon" class="fas fa-moon"></i>
-</div>
-
-
-
 
   <!-- NAVIGATION BAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top py-3">
@@ -63,7 +55,7 @@
         <!-- RIGHT SIDE -->
         <div class="col-md-6 d-flex justify-content-center">
           <div class="tts-card shadow-lg">
-            <textarea id="text-input" class="form-control" rows="7" placeholder="Type your text here..." maxlength="2000"></textarea>
+           <textarea id="text-input" class="form-control" rows="7" placeholder="Type your text here..." maxlength="2000"></textarea>
             <small id="char-count" class="text-muted d-block text-end mt-1">0 / 2000</small>
 
             <!-- Volume, Rate, Pitch -->
@@ -110,7 +102,7 @@
       <div class="row align-items-center">
 
         <div class="col-md-6 text-center text-md-start mb-4 mb-md-0">
-          <img src="about us.png" alt="About Voiceify" class="img-fluid rounded shadow-lg">
+          <img src="images/about us.png" alt="About Voiceify" class="img-fluid rounded shadow-lg">
         </div>
 
         <div class="col-md-6">
@@ -284,6 +276,3 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
